<resources>
    <string name="app_name">InvestSmart</string>
    <string name="invest_smart">Invest Smart</string>

    <!--login_screen-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in with Google</string>
    <string name="welcome">Welcome!</string>

    <!--signup_screen-->

    <string name="sign_up">Sign Up!</string>
    <string name="password_again">Re-enter your password</string>
    <string name="new_account">Don\'t have an account?</string>


    <!--home_screen-->
    <string name="username">UserName</string>
    <string name="settings">Settings</string>

    <!--settings_screen-->
    <string name="account_settings">Account Settings</string>
    <string name="settings_middle_text">You can change your password, your e-mail, or reset your account.</string>
    <string name="change_password">Change Password</string>
    <string name="change_email">Change e-mail</string>
    <string name="reset_account">Reset Account</string>
    <string name="about_us">About Us</string>
    <string name="policy">Terms of Service and Privacy Policy</string>

    <!--assets_screen-->
    <string name="total_money">Total Money: $</string>
    <string name="assets_middle_text">You can invest in companies or sell your shares.</string>
    <string name="current_assets"><u>Current Assets:</u></string>
    <string name="current_assets_empty">You have no assets</string>
    <string name="invest_now">Buy shares now!</string>
    <string name="invest_sell">Invest/Sell</string>
    <string name="assets_bottom_text">Use your money in a smart way!</string>


    <!--reset_account screen-->
    <string name="enter_email">Enter your email</string>
    <string name="email_hint_text">Email</string>
    <string name="confirm_reset_account">Are you sure you want to reset your account?</string>
    <string name="reset_account_bottom_text">Having Problems? Click for Support.</string>
    <string name="unmatched">Emails did not match!</string>

    <!--about_us_screen-->
    <string name="alperen_ugus">Alperen Ugus</string>
    <string name="developer_text">- Developer</string>
    <string name="about_alperen_ugus">Alperen is an awesome junior in Computer Science who is super cool.</string>
    <string name="mackenzie_hull">Mackenzie Hull</string>
    <string name="about_mackenzie_hull">Kenzie is a cool junior in Computer Science</string>
    <string name="seth_rose">Seth Rose</string>
    <string name="about_seth_rose">Seth is a super cool kid in Computer Science.</string>
    <string name="about_us_text">InvestSmart is a virtual stock market application which aims to educate people about
        how the real stock market works. It is one of its kind since it is the only app that makes investment suggestions
        to its users using machine learning algorithms. </string>
    <string name="about_us_team"><u>Here is our team:</u></string>
    <string name="about_us_header"><u>Who we are?</u></string>

    <!--buy/sell icons-->
    <string name="add">+</string>
    <string name="subtract">-</string>

    <!--prediction-->
    <string name="predict">Prediction</string>
    <string name="time_predict">These graphs show yearly and weekly changes of the companies\' stock value.</string>
    <string name="predict_good">We recommend purchasing more stock</string>
    <string name="predict_bad">We do not recommend purchasing more stock</string>
    <string name="predict_info">Click here to see how the algorithm works!</string>

    <!--current_assets-->
    <string name="owned_shares">Owned Shares: </string>
    <string name="company_name">Company Name: </string>
    <string name="signed_in">You have signed in with: </string>

    <!--Navigation-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Invest Smart</string>
    <string name="nav_header_subtitle">investsmartmines@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Navigation Menu-->
    <string name="menu_login">Login</string>
    <string name="menu_home">Home</string>
    <string name="menu_assets">Assets</string>
    <string name="menu_current_assets">Current Assets</string>
    <string name="menu_favcomps">Favorite Companies</string>
    <string name="menu_invest">Invest</string>
    <string name="menu_prediction">Prediction</string>
    <string name="menu_reset_account">Reset Account</string>
    <string name="menu_reset_password">Reset Password</string>
    <string name="menu_about_us">About Us</string>
    <string name="home_second">Home Second</string>

    <string name="hello">Hello</string>
    <string name="invest_text">You can invest your money here!</string>
    <string name="abbreviations">O : Opening H : High, L : Low, PC : Previous Closing</string>
    <string name="symbol">Symbol: </string>
    <string name="current_price">Current Price: $</string>
    <string name="price_o">O: $</string>
    <string name="price_h">H: $</string>
    <string name="price_l">L: $</string>
    <string name="price_pc">PC: $</string>
    <string name="sure">Are you sure to reset your account?</string>
    <string name="proceed">Proceed</string>
    <string name="cancel">Cancel</string>
    <string name="internet">Internet connection is required!</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="question_mark">\?</string>

    <string name="not_enough_money">You do not have enough money to buy shares of this company!</string>
    <string name="confirmation">Confirmation</string>
    <string name="invest_confirmation">Are you sure to buy this share?</string>
    <string name="invest_success">The share successfully added to your assets.</string>
    <string name="shares">Shares:</string>
    <string name="sell_confirmation">Are you sure to sell this share?</string>
    <string name="prediction">The predicted value for the next week is: $</string>
    <string name="ok">OK</string>
    <string name="asset_value">Asset Value: $</string>
    <string name="contact">Contact Us</string>
    <string name="feedback">Your feedback is important to us!</string>
    <string name="feel_free">Please feel free to share your ideas and\nhelp us improve this app.</string>
    <string name="input_problem">You should complete the form before submitting.</string>
    <string name="sign_out">Sign Out</string>
    <string name="not_signed_in">You are not signed in!</string>
</resources>
