<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/homeScreenFragment"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/assetsFragment"
            android:title="@string/menu_assets" />
        <item
            android:id="@+id/currentAssetsFragment"
            android:title="@string/menu_current_assets" />
        <item
            android:id="@+id/favoriteCompaniesFragment"
            android:title="@string/menu_favcomps" />
        <item
            android:id="@+id/investFragment"
            android:title="@string/menu_invest" />
        <item
            android:id="@+id/predictionFragment"
            android:title="@string/menu_prediction" />
        <item
            android:id="@+id/resetPasswordFragment"
            android:title="@string/menu_reset_password" />
        <item
            android:id="@+id/resetAccountFragment"
            android:title="@string/menu_reset_account" />

    </group>
</menu>
