<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/settings_top_text"
            android:text="@string/account_settings"
            android:textColor="@color/colorText"
            android:gravity="center"
            >
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/settings_middle_text"
            android:text="@string/settings_middle_text"
            android:textColor="@color/colorText"
            android:gravity="center"
            >
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/settings_change_password_button"
            android:layout_margin="8dp"
            android:text="@string/change_password"
            android:textColor="#FFFFFF"
            android:background="@drawable/button">
        </Button>

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/settings_reset_account_button"
            android:layout_margin="8dp"
            android:text="@string/reset_account"
            android:textColor="#FFFFFF"
            android:background="@drawable/button">
        </Button>

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/settings_about_us_button"
            android:layout_margin="8dp"
            android:text="@string/about_us"
            android:textColor="#FFFFFF"
            android:background="@drawable/button">
        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settings_bottom_text"
            android:text="@string/policy"
            android:textColor="@color/colorText"
            android:gravity="center"
            android:layout_margin="16dp">

        </TextView>

    </LinearLayout>


</LinearLayout>