<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reset_account_enter_email_text"
                android:text="@string/enter_email"
                android:gravity="left"
                android:textColor="@color/colorText"
                android:layout_margin="20dp">
            </TextView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reset_account_email_edit_text"
                android:gravity="left"
                android:layout_margin="20dp"
                android:hint="@string/email_hint_text">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="24dp"
                android:textStyle="bold"
                android:text="@string/confirm_reset_account"
                android:textColor="@color/colorText"/>
            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/reset_account_reset_button"
                android:text="@string/reset_account"
                android:background="@drawable/button"
                android:textColor="#FFFFFF"
                android:layout_margin="8dp">
            </Button>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reset_account_bottom_text"
                android:text="@string/reset_account_bottom_text"
                android:gravity="center"
                android:textColor="@color/colorText"
                android:layout_margin="20dp">
            </TextView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>