<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/invest_text"
        android:textColor="@color/colorText"
        android:textSize="18sp"></TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/invest_total_money"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/total_money"
        android:textColor="@color/colorText"
        android:textSize="18sp"></TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/abbreviations"
        android:textColor="@color/colorText"
        android:gravity="center"
        android:padding="10dp">
    </TextView>


    <androidx.recyclerview.widget.RecyclerView
        xmlns:android = "http://schemas.android.com/apk/res/android"
        android:id = "@+id/invest_recycler_view"
        android:layout_width = "match_parent"
        android:layout_height = "match_parent"
        >
    </androidx.recyclerview.widget.RecyclerView>


</LinearLayout>