<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_welcome_text"
            android:text="@string/welcome"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="30dp"
            android:layout_margin="10dp">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_email_text"
                android:text="@string/email"
                android:gravity="left"
                android:textColor="#FFFFFF"
                android:layout_margin="10dp">
            </TextView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_email_edit_text"
                android:gravity="left"
                android:layout_margin="10dp"
                android:hint="@string/email">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_password_text"
                android:text="@string/password"
                android:gravity="left"
                android:textColor="#FFFFFF"
                android:layout_margin="10dp">
            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_password_edit_text"
                android:gravity="left"
                android:layout_margin="10dp"
                android:hint="@string/password">
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/login_signin_button"
                android:text="@string/sign_in"
                android:background="@drawable/button"
                android:textColor="#FFFFFF"
                android:layout_margin="8dp">
            </Button>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_new_account_text"
                android:text="@string/new_account"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:layout_margin="10dp">
            </TextView>

            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/login_signup_button"
                android:text="@string/sign_up"
                android:background="@drawable/button"
                android:textColor="#FFFFFF"
                android:layout_margin="8dp">
            </Button>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>